2004-11-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/define-grob-properties.scm (all-user-grob-properties): fixed
	typo s/ly:dimension ?/ly:dimension?/

	* input/regression/lily-in-scheme.ly: 
	* input/regression/music-function.ly: 
	* ly/spanners-init.ly (assertBeamSlope): 
	* scm/music-functions.scm (def-grace-function): add the paper
	argument to music function definitions.

2004-11-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/moment.cc (LY_DEFINE):
	ly:moment-main-{denominator,numberator}, new function.

	* lily/score-engraver.cc (typeset_all): assign to column on basis
	of axis-group-parent-X setting.

	* lily/axis-group-engraver.cc (process_acknowledged_grobs): do
	add_element() on basis of axis-group-parent-Y setting.

	* lily/grob.cc: add axis-group-parent-{XY} properties.

	* input/regression/spacing-stick-out.ly: new file.

	* lily/simple-spacer.cc (add_columns): use binary search for
	setting column rods. Changes O(n^2) to O(n log(n)) for
	constructing spacing problem from columns.
	(add_columns): read allow-outside-line to make sure no texts stick
	out.
	(solve): Simple_spacer::is_active() only determines
	satisfies_constraints_ for non-ragged typesetting.

	* lily/simultaneous-music.cc (to_relative_octave): only set
	old_relative_used if return pitch actually changed.

	* scm/define-context-properties.scm
	(all-user-translation-properties): change to match implementation.

	* python/lilylib.py: Replace re.match by re.search and adds "-c
	showpage" to the gs command line (Johannes Schindelin)

	* scm/framework-ps.scm (output-preview-framework): sanitize bbox
	before processing. Prevents crash when inf is in the extent.

	* scm/define-markup-commands.scm (note-by-number): add "s" to
	"noteheads-" glyphname.
 
	* lily/parser.yy (Generic_prefix_music): supply parser argument to
	music function as well.
	
2004-11-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.5.2

	* Documentation/user/changing-defaults.itely (Creating titles):