@@ -1,3 +1,8 @@
+2004-11-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/accidental-placement.cc (position_accidentals): shortcut if
+	no accidentals to place.
+
 2004-11-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>
 
 	* scm/define-grob-properties.scm (all-user-grob-properties): fixed
